# application

./: .gitignore  README.md  package.json  vite.config.ts
src/: App.tsx  ColorPicker.tsx  IThingCard.tsx  Items.tsx  ThingCard.tsx  Things.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: humidities.rs  lib.rs  main.rs  temperatures.rs
src/components/: ManagerFactory.tsx
src/components/led/: ColorPicker.tsx
src/components/networkmanager/: INetworkManager.tsx  NetworkManager.tsx  SerdeNetworkManager.tsx
src/components/temperature/: Temperatures.tsx
src/components/things/: ThingCard.tsx
